--- a/web/src/templates/templates/base.html
+++ b/web/src/templates/templates/base.html
@@ -1,23 +1,15 @@
-{% extends "base.html" %}
-
-{% block heading %}
-    Home Page
-{% endblock %}
-
-{% block body %}
-    <a href="{{ url_for('index')}}">Index</a>
-{% endblock %}
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google" content="notranslate">
         <title>CS50W Lecture 2</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Lecture 2 - Flask</h1>
+        <h1>{% block heading %}{% endblock %}</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -37,9 +29,16 @@
                 <li class="nav-item">
                   <a class="nav-link" href="blog.html">Blog</a>
                 </li>
+                <li class="nav-item">
+                    <form action="{{ url_for('hello')}}" method="post">
+                        <input type="text" name="name" placeholder="Enter Your Name">
+                        <button>Submit</button>
+                    </form> 
+                  </li>
               </ul>
             </div>
         </nav>
+        {% block body %}
+        {% endblock %}
     </body>
-</html> -->
-
+</html>
